# dolfiny

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
demo/: mesh_annulus_gmshapi.py  plain_bingham_block.py  prepare_output.py
demo/beam/: beam_curved_finitestrain_bstar.py  beam_curved_finitestrain_bstar_reissner.py  beam_curved_finitestrain_bzero.py  beam_static.py  beam_static_nonref.py  mesh_curve2d_gmshapi.py  mesh_curve3d_gmshapi.py  postprocess_matplotlib.py
demo/beltrami/: mesh_box_onboard.py  plot_box_pyvista.py  solid_stressonly.py
demo/bingham/: bingham_block.py  bingham_lm_block.py  mesh_annulus_gmshapi.py  plain_bingham_block.py  prepare_output.py
demo/continuation/: continuation_planartruss.py  continuation_planartruss_disp.py  continuation_schwedler.py  continuation_spatialtruss.py  continuation_stardome.py  mesh_planartruss_gmshapi.py  mesh_schwedler_gmshapi.py  mesh_spatialtruss_gmshapi.py  mesh_stardome_gmshapi.py
demo/elasticity/: solid_stressbased.py
demo/plasticity/: mat3invariants.py  mesh_din50154_gmshapi.py  mesh_iso6892_gmshapi.py  solid_plasticity_localsolver.py  solid_plasticity_monolithic.py  solid_plasticity_spectral.py  test_eig_elast_az.py  test_eig_matrix.py
demo/plasticity_rankine/: mesh_notched.py  rankine.py
demo/spectral/: mesh_tube3d_gmshapi.py  plot_block3d_pyvista.py  plot_tube3d_pyvista.py  solid_elasticity_classic.py  spectral_elasticity.py  (+1 more)
docker/: Dockerfile  Dockerfile.dev-env
dolfiny/: __init__.py  continuation.py  expression.py  function.py  interpolation.py  invariants.py  io.py  la.py  localsolver.h  localsolver.py  mesh.py  odeint.py  projection.py  restriction.py  slepcblockproblem.py  snesblockproblem.py  snesproblem.py  utils.py
test/: conftest.py  standalone_odeint.py  standalone_postprocess.py  test_function.py  test_interpolation.py  test_la.py  test_mesh.py  test_odeint.py  test_restriction.py  test_slepcproblem.py  test_snesproblem.py
(+50 files in other folders)
